# gf-rgl

./: .gitignore  .travis.yml  Config.hs  LICENSE  Make.bat  Make.hs  Make.sh  Makefile  README.md  RELEASE.md  Setup.bat  Setup.hs  Setup.sh  flake.nix  languages.csv
.github/workflows/: build.yml  (+2 more)
doc/: .gitignore  AbsFunDoc.hs  CountLines.hs  Globes.hs  Makefile  MkExx.hs  MkExxTable.hs  MkSynopsis.hs  _template.html  example-tables.gfs  missing-in-rgl-Grammar.tsv  quicklinks.js  revealpopup.css  rgl-publications.txt  show_missing.py  status.txt  synopsis-intro.txt  synopsis.css
src/: Clone.hs  Lang.labels  README.md  unittest.py
src/morphodict/: Makefile  MkMorphodict.hs  MorphoDictAra.gf  MorphoDictChi.gf  MorphoDictChiAbs.gf  MorphoDictEng.config  MorphoDictEng.gf  MorphoDictEng.header  MorphoDictEngAbs.gf  MorphoDictEngAbs.header  MorphoDictFin.config  MorphoDictFin.gf  MorphoDictFin.header  MorphoDictFinAbs.gf  MorphoDictFinAbs.header  MorphoDictFreAbs.gf  MorphoDictGer.gf  MorphoDictGerAbs.gf  MorphoDictIta.gf  MorphoDictIta.header  MorphoDictItaAbs.gf  MorphoDictItaAbs.header  MorphoDictPorAbs.gf  MorphoDictSpa.gf  MorphoDictSpaAbs.gf  MorphoDictSwe.config  MorphoDictSwe.header  MorphoDictSweAbs.gf  MorphoDictSweAbs.header  README  README.md  get_dict.py  morphodict.cabal
src/morphodict/saldo/: Saldo.header  SaldoGF.hs  SaldoSwe.header
src/morphodict/utils/: fixAMost.sh  only_homonyms.sh  remove_duplicates.py  remove_sense_distinctions.sh
treebanks/: README  numeral-trees.txt  ud-rgl-trees.txt
unittest/: README.md  unittest-example.gftest  unittest.py
(+1978 files in other folders)
