name: morphodict
version: 0.1
homepage: https://github.com/GrammaticalFramework/gf-rgl/tree/master/src/morphodict
author: Aarne Ranta
category: Natural Language Processing
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

executable MkMorphoDict
  hs-source-dirs:
    .
  main-is: MkMorphoDict.hs
  other-modules:
  build-depends:
    base,
    containers,
    safe,
    gf
  default-language: Haskell2010